<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Resonance</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="head">head</string>
    <string name="ret">返回</string>
    <string name="right">右边按钮</string>
    
    
    <!-- 各个activity的名称 -->
    <string name="activity_friends">FriendsActivity</string>
    <string name="activity_message">MessageActivity</string>
    <string name="activity_search">SearchActivity</string>
    <string name="activity_homepage">HomePageActivity</string>
    <string name="activity_login">LoginActivity</string>
    <string name="activity_register">RegisterActivity</string>
    <string name="activity_improveinfo">ImproveInfoActivity</string>
    <string name="activity_modifyinfo">ModifyInfoActivity</string>
    <string name="activity_modifyinterest">ModifyInterestsActivity</string>
    <string name="activity_testheart">TestHeartActivity</string>
    <string name="activity_fitsuccess">FitSuccessActivity</string>
    <string name="activity_groupchatrooms">GroupChatRoomsActivity</string>
    <string name="activity_groupchat">GroupChatActivity</string>
    <string name="activity_friendsinfo">FriendsInfoActivity</string>
    <string name="activity_addfriend">AddFriendActivity</string>
    <string name="activity_questionbyalp">QuestionsByAlpActivity</string>
    <string name="activity_questionbycat">QuestionByCatActivity</string>
    <string name="activity_strategy">StrategyActivity</string>
    <string name="activity_strategyinfo">StrategyInfoActivity</string>
    <string name="activity_chat">ChatActivity</string>
    <string name="activity_chatwithq">ChatWithQActivity</string>
    <string name="activity_chatwitha">ChatWithAActivity</string>
    
    
    <!-- activity_main layout -->
    <string name="main_message">消息</string>
    <string name="main_friends">好友</string>
    <string name="main_search">发现</string>
    <string name="main_homepage">主页</string>
    <string name="main_tab_now">正在使用的Tab</string>
    
    <!-- friends layout -->
    <string name="add_friends">添加好友</string>
    <string name="friends_search">搜索联系人</string>
    <string name="friends_search_fail">暂无匹配联系人</string>
    
    <!-- friends_list_item layout -->
    <string name="friends_list_image">头像</string>
    
    <!-- search layout -->
    <string name="search_heart">测试心跳</string>
    <string name="search_strategy">查看交友秘籍</string>
    <string name="search_chatroom">热门群聊室</string>
    <string name="search_questions">系统题库</string>
    
    <!-- group_chat_room layout -->
    <string name="group_chat_rooms">群聊室</string>
    <string name="group_chat_room_name">群聊室名称</string>
    
    <!-- message_item layout -->
    <string name="message_icon">信息发送人头像</string>
    <string name="message_name">信息发送人</string>
    <string name="message_time">信息发送时间</string>
    <string name="message_message">信息内容</string>
    
    <string name="chat_send">发送</string>
    <string name="chat_send_icon">发送人头像</string>
    <string name="chat_receiver_icon">收信人头像</string>
    
    <!-- friend_info layout -->
    <string name="friend_info">好友资料</string>
    <string name="friend_info_icon">好友头像</string>
    <string name="friend_info_name">好友姓名</string>
    <string name="friend_info_id">好友ID:</string>
    <string name="friend_info_content">交友宣言</string>
    <string name="friend_info_interests">兴趣</string>
    <string name="friend_info_send">发消息</string>
    <string name="friend_info_first_interest">第一个兴趣</string>
    <string name="friend_info_second_interest">第二个兴趣</string>
    <string name="friend_info_more_interest">更多兴趣</string>
</resources>
