<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:gravity="center_vertical"
    android:background="@drawable/message_listitem"
    android:descendantFocusability="blocksDescendants">
    
     <ImageView
         android:id="@+id/message_icon_imageview"
         android:layout_width="55dp"
         android:layout_height="55dp"
         android:contentDescription="@string/message_icon"
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
         android:paddingLeft="5dp"
         android:src="@drawable/usericon" />

     <TextView
         android:id="@+id/message_name_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@id/message_icon_imageview"
         android:padding="7dp"
         android:text="@string/message_name"
         android:textStyle="bold"
         android:textColor="@color/black" />
     <TextView
         android:id="@+id/message_time_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:padding="7dp"
         android:text="@string/message_time"
         android:textColor="@color/message_item_time" />
      <TextView
         android:id="@+id/message_message_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@id/message_icon_imageview"
         android:layout_alignParentBottom="true"
         android:padding="7dp"
         android:text="@string/message_message"
         android:textColor="@color/message_item_time" />

</RelativeLayout>
