<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
  	android:layout_height="fill_parent"
    android:background="#eee"
    android:orientation="vertical" >
           
    <include layout="@layout/head_ret"/>
		
    <ScrollView
    	android:layout_width="fill_parent"
    	android:layout_height="fill_parent"
    	android:scrollbarStyle="outsideOverlay"  >
			
		<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="0dp" >
			
            <ImageView
      		    	android:id="@+id/friend_info_icon_imageview"
            		android:layout_width="wrap_content"
        			android:layout_height="wrap_content"        	     	
        			android:scaleType="matrix"
        			android:layout_centerVertical="true"
        			android:layout_alignParentLeft="true"        			
        			android:layout_marginLeft="8dp"
        			android:padding="8dp"
        			android:contentDescription="@string/friend_info_icon"
        			android:src="@drawable/usericon"
        			 /> 
        			
            <TextView
                    android:id="@+id/friend_info_name_textview"
        			android:layout_width="wrap_content" 
        			android:layout_height="wrap_content"
        			android:layout_alignParentTop="true"
        			android:layout_alignParentLeft="true"
        			android:layout_marginLeft="95dp"
        			android:padding="15dp" 
        			android:text="@string/friend_info_name"
        			android:textSize="18sp"		
					android:textColor="#000" />
            <TextView
                    android:id="@+id/friend_info_id_textview"
        			android:layout_width="wrap_content" 
        			android:layout_height="wrap_content"
        			android:layout_alignParentLeft="true"
        			android:layout_alignParentBottom="true"
        			android:layout_marginLeft="95dp"
        			android:padding="15dp" 
        			android:text="@string/friend_info_id"
        			android:textSize="15sp"		
					android:textColor="#333" /> 
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="3dp" >
			
         	<RelativeLayout      				    
            	android:layout_width="fill_parent"
            	android:layout_height="wrap_content"            	
            	android:gravity="center_vertical"
            	android:clickable="true"
            	android:background="@drawable/preference_first_item" >
      		  <TextView
        			android:layout_width="wrap_content" 
        			android:layout_height="wrap_content"
        			android:layout_centerVertical="true"
        			android:padding="8dp" 
        			android:text="@string/friend_info_content"
        			android:textSize="17sp"		
					android:textColor="#333" /> 
				<TextView
				    android:id="@+id/friend_info_content_textview"
        			android:layout_width="wrap_content" 
        			android:layout_height="wrap_content"
        			android:layout_centerVertical="true"
        			android:layout_alignParentLeft="true"
        			android:layout_marginLeft="80dp"
        			android:padding="8dp" 
        			android:text="@string/friend_info_content"
        			android:textSize="15sp"		
					android:textColor="#000" /> 					
   		  	</RelativeLayout>

      		<RelativeLayout
            		android:layout_width="fill_parent"
            		android:layout_height="wrap_content"
            		android:gravity="center_vertical"
            		android:clickable="true"
            		android:background="@drawable/preference_last_item" >
            	<TextView
        			android:layout_width="wrap_content" 
        			android:layout_height="wrap_content"
        			android:layout_centerVertical="true"
        			android:padding="8dp" 
        			android:text="@string/friend_info_interests"
        			android:textSize="17sp"		
					android:textColor="#333" /> 
				<ImageView
				    android:id="@+id/friend_info_first_interest"
      		    	android:layout_width="wrap_content"
        			android:layout_height="wrap_content"        	     	
        			android:scaleType="matrix"
        			android:layout_centerVertical="true"
        			android:layout_alignParentLeft="true"
        			android:layout_marginLeft="80dp"
        			android:padding="8dp"
        			android:contentDescription="@string/friend_info_first_interest"
        			android:src="@drawable/usericon" />  
        		<ImageView
        		    android:id="@+id/friend_info_second_interest"
      		    	android:layout_width="wrap_content"
        			android:layout_height="wrap_content"        	     	
        			android:scaleType="matrix"
        			android:layout_centerVertical="true"
        			android:layout_toRightOf="@id/friend_info_first_interest"
        			android:contentDescription="@string/friend_info_second_interest"
        			android:layout_marginLeft="0dp"
        			android:padding="8dp"
        			android:src="@drawable/usericon" />  	
        			
        		<ImageView
        		    android:id="@+id/friend_info_more_interest"
            		android:layout_width="wrap_content"
        			android:layout_height="wrap_content"        	     	
        			android:scaleType="matrix"
        			android:layout_centerVertical="true"
        			android:layout_alignParentRight="true"
        			android:clickable="true"
        			android:contentDescription="@string/friend_info_more_interest"
        			android:src="@drawable/mm_submenu" />	
      		</RelativeLayout>
      		
      	
        </LinearLayout>
        
        <Button  
            android:id="@+id/friend_info_send"          
            android:layout_width="300dp"
            android:layout_height="wrap_content"            
            android:background="@drawable/btn_style_green"            
            android:layout_marginTop="14dp"
            android:layout_marginBottom="14dp"
            android:text="@string/friend_info_send"
            android:textColor="#fff"
            android:textSize="18sp"
             />
	</LinearLayout>
  </ScrollView>
</LinearLayout>
