<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical" >
    
    <FrameLayout 
        android:id="@+id/friends_top_layout"
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:background="@color/white">
    	
	   <TextView
            android:id="@+id/friends_top_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/head_textsize"
            android:text="@string/main_friends"
            />
	   
	   <ImageButton 
	        android:id="@+id/friends_add"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right|center"
            android:contentDescription="@string/add_friends"
            android:background="@drawable/friends_add_btn"
	       />
	    	        
    </FrameLayout>
    
    <EditText 
        android:id="@+id/friends_search_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/friends_search_edit_margin"
        android:drawableLeft="@drawable/friends_search"
        android:background="@drawable/friends_search_edit_pre"
        android:hint="@string/friends_search"
        android:textSize="@dimen/friends_search_textsize" 
        android:textColor="@color/black"
        /> 
    
     <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
        
        <ListView 
            android:id="@+id/friends_listvew"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
           	android:dividerHeight="@dimen/friends_listview_divider"
            android:divider="@color/friends_listview_divider"/>
        
        <TextView 
            android:id="@+id/friends_letter_notice"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/friends_toast_letter_bg"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/friends_search_lettersize"
            android:visibility="gone"/>
        
        <TextView
            android:id="@+id/friends_search_fail_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/friends_search_fail_textsize"
            android:text="@string/friends_search_fail"
            android:visibility="gone"/>
        
        <com.example.resonance.view.widget.AlphabetScrollBar
            android:id="@+id/friends_alphabetscrollbar"
            android:layout_gravity="right"
            android:layout_width="@dimen/friends_sidebar_width"
            android:layout_height="match_parent"/>
        
   	 </FrameLayout>

</LinearLayout>
